new proj/src/objects/Contract_Summary__c.object
<CustomObject>
    <fields>
        <fullName>GE_Is_there_Exten_of_warnty_term__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is there a Cap on warranty time standard?&quot; when the values selected is &quot;No&quot;</description>
        <inlineHelpText>Is there any Extension of warranty term after warranty Remedy (repair, replacement, reperform)? If Yes what is the term?</inlineHelpText>
        <label>Is there any Extension of warrantyTerm?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Is_there_Paymt_mile__c</fullName>
        <inlineHelpText>If the agreement is silent, it is N/A</inlineHelpText>
        <label>Is there any Payment milestone?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_there_a_LD_clause__c</fullName>
        <inlineHelpText>Specify Amount/%, specify to what the % applies [amount of total order or amount of delaied items or services] and the frequency [daily, weekly]. 
If the agreement is silent, N/A</inlineHelpText>
        <label>Is there a LD clause?*</label>
        <picklist>
            <picklistValues>
                <fullName>delay in delivery of goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delay in delivery of documents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delay in performance of service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_there_a_Pricing_Letter__c</fullName>
        <inlineHelpText>Pricing Methodology - Is there a Pricing Letter?</inlineHelpText>
        <label>Is there a Pricing Letter?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Is_there_an_Esc_mech__c</fullName>
        <inlineHelpText>Pricing Methodology - Is there an Escalation mechanism? If the agreement is silent, it is No.</inlineHelpText>
        <label>Is there an Escalation mechanism?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_LDs_or_Pena_max_amt__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is there a Liquidated damage clause for delay in: 1) delivery of goods? 2) delivery of documents? 3) performance of services?&quot; when the values selected are &quot;delay in delivery of goods; delay in delivery of documents; delay in performance of service&quot;</description>
        <inlineHelpText>Liquidated damages or Penalty maximum amount: Amount/%
If the agreement is silent, N/A</inlineHelpText>
        <label>LDs or Penalties maximum amount</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_LDs_or_Penalty_amount_Details__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is there a Liquidated damage clause for delay in: 1) delivery of goods? 2) delivery of documents? 3) performance of services?&quot; when the values selected are &quot;delay in delivery of goods; delay in delivery of documents; delay in performance of service&quot;</description>
        <inlineHelpText>Specify Amount/%, specify to what the % applies [amount of total order or amount of delaied items or services] and the frequency [daily, weekly]</inlineHelpText>
        <label>LDs or Penalty amount &amp; Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_List_of_pre_app_GE_Legal_Enti__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is the Subcontract Clause within the GE standard?&quot; when the values selected is &quot;No&quot;</description>
        <inlineHelpText>In case of Subcontract without consent for a pre-approved List of  GE Legal Entities, please list all such Legal Entities</inlineHelpText>
        <label>List of pre-approved GE Legal Entities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_List_pre_appr_GE_Legal_Entit__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is the Assignment Clause within the GE standard?&quot; when the values selected is &quot;No&quot;</description>
        <inlineHelpText>In case of assignment without consent for a pre-approved List of  GE Legal Entities, please list all such Legal Entities.</inlineHelpText>
        <label>List pre-approved GE Legal Entities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Local_Content__c</fullName>
        <inlineHelpText>Is there any reference to local law obligations/ restrictions? LOCAL CONTENT</inlineHelpText>
        <label>Local Content*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_MSD_and_dlrs_from_the_US__c</fullName>
        <inlineHelpText>For the so called &quot;MSD&quot; deliveries and for all deliveries from the US, is title transfer postponed immediately after than goods passed the territorial lands, skies and seas of the shipping country? If the agreement is silent, it is No.</inlineHelpText>
        <label>MSD and deliveries from the US*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Max_GE_susp_due_to_Cust__c</fullName>
        <description>DEPENDENT FIELD from &quot;Has GE the right of Suspension for Customer default?&quot; when the value selected is &quot;Yes&quot;</description>
        <inlineHelpText>If GE has the right of Suspension for Customer default what is the maximum term for suspension? Insert number of days for the maximum suspension period</inlineHelpText>
        <label>Max term for GE&apos;s susp. due to Customer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Max_term_for_Cust_sus__c</fullName>
        <description>DEPENDENT FIELD from &quot;Can Customer suspend the contract for convenience?&quot; when the value selected is &quot;Yes&quot;</description>
        <inlineHelpText>If Customer can suspend the contract for convenience, what is the maximum term for suspension? Insert number of days for the maximum suspension period</inlineHelpText>
        <label>Maximum term for Customer&apos;s suspension</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Features_of_GE_susp_due_to_Cust__c</fullName>
        <inlineHelpText>In case of suspension due to causes attributable to Customer:
1) written notice is required?
2) are the suspension costs be charged to Customer? 
3) will the delivery schedule be adjusted accordingly?</inlineHelpText>
        <label>Features of GE&apos;s susp.due to Customer*</label>
        <picklist>
            <picklistValues>
                <fullName>written notice is required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>suspension cost can be charged to Custmr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>delivery schedule can be adjusted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Other_Poll_relat_notable_item__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is there Pollution Liability Indemnification by Customer? &quot; when the value selected is &quot;Yes&quot;</description>
        <inlineHelpText>Please enter comments for pollution items not already covered; Summary or N/A</inlineHelpText>
        <label>Other Pollution-related notable items</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Paymt_Term_days_from_which_event__c</fullName>
        <inlineHelpText>Payment Term (in days and from which event). If the agreement is silent, it is N/A</inlineHelpText>
        <label>Payment Term (days from which event)*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Pollution_Liability_indemn_by_Buyer__c</fullName>
        <inlineHelpText>Is there Pollution Liability Indemnification by Customer? Yes=Indemnity by Customer for Pollution emanating from the Equipment/Fleet/Pipelines; Otherwise, if No, specify who is liable for any pollution or contamination arising out of the Contract</inlineHelpText>
        <label>Pollution Liability indemnity by Buyer*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Prods_Services_quoted_in_Pricing_List__c</fullName>
        <description>DEPENDENT FIELD from &quot;Frame Agreement Type&quot; when the value selected is &quot;Prices&quot;</description>
        <inlineHelpText>Which Products/Services are quoted in the Pricing List?</inlineHelpText>
        <label>Products/Services quoted in Pricing List</label>
        <picklist>
            <picklistValues>
                <fullName>Parts&apos; price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repairs&apos;s price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field services rates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project management fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>storage fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Structure_of_Payment_milestone__c</fullName>
        <description>DEPENDENT FIELD from &quot;Is there any Payment milestone?&quot; when the value selected is &quot;Yes&quot;</description>
        <label>Structure of Payment milestone</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Sum_IP_provision_req__c</fullName>
        <label>Summarise IP provisions/requirements*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_TCs_to_be_agreed_each_PO__c</fullName>
        <inlineHelpText>Are there any items or / and T&amp;Cs that are meant to be agreed on a Purchase Order basis? (e.g. Price/Scope, Delivery etc.). If the agreement is silent, it is N/A</inlineHelpText>
        <label>Are there T&amp;Cs to be agreed on each PO?*</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Tax_indemnity_clause__c</fullName>
        <inlineHelpText>Is there a tax indemnity clause 
(a) in favor of GE? 
(b) in favor of Customer? 
(c) in favor of Customer group?
(d) in favor of GE group?</inlineHelpText>
        <label>Tax indemnity clause*</label>
        <picklist>
            <picklistValues>
                <fullName>In favor of GE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In favor of Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In favor of Customer group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In favor of GE group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_Term_fees_if_GE_term__c</fullName>
        <description>DEPENDENT FIELD from &quot;Has GE the right of Termination for Customer default?&quot; when the value selected is &quot;Yes&quot;</description>
        <inlineHelpText>If GE has the right of termination for Customer default, Specify Termination fees, if present.</inlineHelpText>
        <label>Termination fees if GE terminatation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_Title_Transfer_and_Risk_of_Loss_Std__c</fullName>
        <description>DEPENDENT FIELD from &quot;Frame Agreement Applicable Products /Services&quot; when the values selected is &quot;Products&quot;</description>
        <inlineHelpText>Are the Title Transfer and Risk of Loss aligned with Incoterm Delivery Terms as per GE Standard?</inlineHelpText>
        <label>Title Transfer and Risk of Loss Std?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_VAT_or_similar_exclud_from_prices__c</fullName>
        <inlineHelpText>Are VAT or similar indirect taxes excluded from contract price?</inlineHelpText>
        <label>VAT (or similar) excluded from prices*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>And/Or</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Silent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_Warranty_clause_if_no_std__c</fullName>
        <description>DEPENDENT FIELD from &quot;Standard Warranty&quot;  when the value selected is &quot;No&quot;</description>
        <inlineHelpText>warranty clause description if it is not standard</inlineHelpText>
        <label>Warranty clause if no std</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_add_Vat_or_similar_Prices__c</fullName>
        <inlineHelpText>Is GE entitled to apply Vat or similar indirect taxes on top of Agreement/PO Prices?</inlineHelpText>
        <label>GE can add Vat or similar on Prices*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_chang_in_law_clau_incl_taxes__c</fullName>
        <inlineHelpText>Does the &apos;change-in-law&apos; language include also taxes, duties and other similar fees?</inlineHelpText>
        <label>&quot;Change-in-law&quot; clause includes taxes*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_harm_no_foul_clause__c</fullName>
        <label>Is there  a &quot;no harm no foul&quot; clause?*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_in_contry_out_of_cotry_defin__c</fullName>
        <inlineHelpText>Are &quot;in-country&quot; and &quot;out-of-country&quot; scopes respectively defined? If Yes, explain how.</inlineHelpText>
        <label>&quot;In-Country&quot; &amp; &quot;Out-of-Country&quot; defined*</label>
        <picklist>
            <picklistValues>
                <fullName>In country scope defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out-country scope defined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scopes not defined</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_possty_gross_taxes__c</fullName>
        <inlineHelpText>Is GE entitled to gross-up any taxes of the Country where &apos;in-country&apos; services are performed, which are applied to the &quot;out-of-country&quot; scope?</inlineHelpText>
        <label>GE possibility to gross-up any taxes*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_right_ship_goods_to_strge__c</fullName>
        <inlineHelpText>In case the Delivery is not possible for reasons not attributable to GE, does GE have the right to ship the goods to storage?</inlineHelpText>
        <label>GE have right to ship goods to storage</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_rigt_to_term_Cust_defalt__c</fullName>
        <inlineHelpText>Has GE the right of Termination for Customer default?</inlineHelpText>
        <label>GE right to terminate for Cust. default*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_s_Susp_for_Cust_deft__c</fullName>
        <inlineHelpText>Has GE the right of Suspension for Customer default?</inlineHelpText>
        <label>GE&apos;s Suspension for Customer default*</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Contract Summary</label>
    <nameField>
        <label>Contract Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Summary</pluralLabel>
    <recordTypes>
        <fullName>Finance_Pricing</fullName>
        <active>true</active>
        <label>Finance &amp; Pricing</label>
    </recordTypes>
    <recordTypes>
        <fullName>Legal</fullName>
        <active>true</active>
        <label>Legal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Taxes</fullName>
        <active>true</active>
        <label>Taxes</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Exceptional_Access__c</fullName>
        <label>Exceptional Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>GE_OG_AssignmentClauseDependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL( GE_Is_the_Assig_Clau_std__c , &quot;No&quot;) ,
$RecordType.Name =&quot;Legal&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;), 

OR(
ISBLANK( GE_Desc_the_Assign_clause_istd__c ), 
ISBLANK(  GE_List_pre_appr_GE_Legal_Entit__c )))</errorConditionFormula>
        <errorMessage>Please Enter:&quot;Describe the Assignment clause if no std&quot; 
 and &quot;List pre-approved GE Legal Entities&quot; fields.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Can_Customer_suspend_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;), 
 
ISPICKVAL(GE_Cust_suspnd_for_conv__c, &quot;Yes&quot;), 

ISBLANK(  GE_Max_term_for_Cust_sus__c  ) 
)</errorConditionFormula>
        <errorDisplayField>GE_Max_term_for_Cust_sus__c</errorDisplayField>
        <errorMessage>Enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Cap_on_warranty_time_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name =&quot;Legal&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),

CONTAINS(GE_Warranty_clause_if_no_std__c , &quot;No&quot;) , 

ISBLANK(  GE_Is_there_Exten_of_warnty_term__c ))</errorConditionFormula>
        <errorDisplayField>GE_Is_there_Exten_of_warnty_term__c</errorDisplayField>
        <errorMessage>Enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Customer_termination_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),
 
ISPICKVAL(  GE_Cust_term_for_conven__c  , &quot;Yes&quot;), 

ISBLANK(    GE_Can_sche_and_fees__c  ) 
)</errorConditionFormula>
        <errorDisplayField>GE_Can_sche_and_fees__c</errorDisplayField>
        <errorMessage>Enter the value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Describe_no_std_Tax_Clause_is_req</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
$RecordType.Name =&quot;Taxes&quot;,

ISPICKVAL(GE_Status__c,&quot;Active&quot;),
 
ISPICKVAL(  GE_IS_GE_std_Tax_clause_includ__c  , &quot;No&quot;),

ISBLANK( GE_Describe_no_std_Tax_Clause__c )
)</errorConditionFormula>
        <errorDisplayField>GE_Describe_no_std_Tax_Clause__c</errorDisplayField>
        <errorMessage>Enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_DiscountsOthers_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),  
 
INCLUDES(  GE_Incen_Disc_are_includ__c  , &quot;Others&quot;),

OR(
ISBLANK(  GE_If_Othrs_spcify_incen_Dis__c ),

AND(

NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Directly on the order&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Yearly by voucher/credit note/change order&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Yearly by next year applicable discount percentage&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;At corporate/headquarter level&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Others&quot;)))

))</errorConditionFormula>
        <errorMessage>Please enter:&quot;How the discount is applied?&quot;,&quot;If Others, specify incentives/Discounts&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Discounts_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),   

OR(
INCLUDES(  GE_Incen_Disc_are_includ__c  , &quot;Base discount&quot;),
INCLUDES(  GE_Incen_Disc_are_includ__c  , &quot;Volume discount&quot;)),

AND(

NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Directly on the order&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Yearly by voucher/credit note/change order&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Yearly by next year applicable discount percentage&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;At corporate/headquarter level&quot;)),
NOT( ISPICKVAL( GE_How_the_discount_is_applied__c , &quot;Others&quot;))

))</errorConditionFormula>
        <errorDisplayField>GE_How_the_discount_is_applied__c</errorDisplayField>
        <errorMessage>Enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Escalation_MechnismYes_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),

OR(
ISPICKVAL( GE_If_detail_Esc_mech__c , &quot;Fixed Rate&quot;),
ISPICKVAL( GE_If_detail_Esc_mech__c , &quot;Variable based on indexes&quot;),
ISPICKVAL( GE_If_detail_Esc_mech__c , &quot;Mixed&quot;)),

ISBLANK( GE_If_vari_mini_floor_applic__c ))</errorConditionFormula>
        <errorDisplayField>GE_If_vari_mini_floor_applic__c</errorDisplayField>
        <errorMessage>Enter the value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Escalation_Mechnism_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
 ISPICKVAL(GE_Status__c,&quot;Active&quot;),  
ISPICKVAL( GE_Is_there_an_Esc_mech__c , &quot;Yes&quot;),

OR( 
ISBLANK( GE_Detail_Frm_indx_Floor_Cap__c ), 

AND(
NOT( ISPICKVAL( GE_If_detail_Esc_mech__c , &quot;Fixed Rate&quot;)),
NOT( ISPICKVAL( GE_If_detail_Esc_mech__c , &quot;Variable based on indexes&quot;)),
NOT( ISPICKVAL( GE_If_detail_Esc_mech__c , &quot;Mixed&quot;)))

))</errorConditionFormula>
        <errorMessage>Please enter:&quot;If yes, detail Escalation mechanism&quot;,&quot;Detail Formula, indexes and Floor/Cap&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Exclusion_of_Consequent_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(  
ISPICKVAL(GE_Contract_Name__r.Exclusion_of_Consequential_Damages_incl__c,    &quot;Y&quot;), 
$RecordType.Name =&quot;Legal&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),


AND(
NOT(ISPICKVAL(  GE_Conse_Damages_exclu__c  , &quot;Yes&quot;)), 
NOT(ISPICKVAL(  GE_Conse_Damages_exclu__c , &quot;No&quot;))))</errorConditionFormula>
        <errorDisplayField>GE_Conse_Damages_exclu__c</errorDisplayField>
        <errorMessage>Enter the value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_FA_Type1_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),
 
INCLUDES( GE_Contract_Name__r.GE_OG_FA_Type__c,&quot;Pricing Methodology&quot;),

OR(
AND(
 NOT(ISPICKVAL(GE_Is_there_an_Esc_mech__c ,&quot;Yes&quot; )),
 NOT(ISPICKVAL(GE_Is_there_an_Esc_mech__c ,&quot;No&quot; ))),

AND(
 NOT(ISPICKVAL( GE_Is_there_a_Pricing_Letter__c  ,&quot;Yes&quot; )),
 NOT(ISPICKVAL(GE_Is_there_a_Pricing_Letter__c ,&quot;No&quot; ))),


AND(
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;No Discount&quot;)),
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;Base discount&quot;)),
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;Volume discount&quot;)),
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;Others&quot;)))

))</errorConditionFormula>
        <errorMessage>Please enter:Incentives /Discounts are included,Is there an Escalation mechanism?, Is there a Pricing Letter?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_FA_Type_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name=&quot;Finance &amp; Pricing&quot;,
ISPICKVAL(GE_Status__c,&quot;Active&quot;),
 
INCLUDES( GE_Contract_Name__r.GE_OG_FA_Type__c,&quot;Prices&quot;), 

OR(
AND(
 NOT(ISPICKVAL(GE_Is_there_an_Esc_mech__c ,&quot;Yes&quot; )),
 NOT(ISPICKVAL(GE_Is_there_an_Esc_mech__c ,&quot;No&quot; ))),

AND(
 NOT(ISPICKVAL( GE_Is_there_a_Pricing_Letter__c  ,&quot;Yes&quot; )),
 NOT(ISPICKVAL(GE_Is_there_a_Pricing_Letter__c ,&quot;No&quot; ))),

AND(
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;No Discount&quot;)),
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;Base discount&quot;)),
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;Volume discount&quot;)),
NOT(INCLUDES( GE_Incen_Disc_are_includ__c ,&quot;Others&quot;))),

AND(
NOT(INCLUDES( GE_Prods_Services_quoted_in_Pricing_List__c ,&quot;Parts&apos; price&quot;)),
NOT(INCLUDES( GE_Prods_Services_quoted_in_Pricing_List__c ,&quot;Repairs&apos;s price&quot;)),
NOT(INCLUDES( GE_Prods_Services_quoted_in_Pricing_List__c ,&quot;Field services rates&quot;)),
NOT(INCLUDES( GE_Prods_Services_quoted_in_Pricing_List__c ,&quot;Project management fee&quot;)),
NOT(INCLUDES( GE_Prods_Services_quoted_in_Pricing_List__c ,&quot;storage fee&quot;)),
NOT(INCLUDES( GE_Prods_Services_quoted_in_Pricing_List__c ,&quot;Others&quot;))

)))</errorConditionFormula>
        <errorMessage>Please enter:Products/Services quoted in Pricing List, Incentives /Discounts are included,Is there an Escalation mechanism?, Is there a Pricing Letter?</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GE_OG_Finance_PricingStatus_Dependency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
$RecordType.Name =&quot;Finance &amp; Pricing&quot;,
 ISPICKVAL(  GE_Status__c  , &quot;Active&quot;),

OR(
ISBLANK(  GE_Invoic_proced__c ),
ISBLANK(  GE_TCs_to_be_agreed_each_PO__c ),
ISBLANK(  GE_Paymt_Term_days_from_which_event__c ),
 

AND(
NOT(ISPICKVAL(GE_Is_GE_entitled_to_reject_orders__c,&quot;Yes&quot;)),
NOT(ISPICKVAL(GE_Is_GE_entitled_to_reject_orders__c,&quot;No&quot;)),
NOT(ISPICKVAL(GE_Is_GE_entitled_to_reject_orders__c,&quot;N/A&quot;))
), 

AND( 
NOT(ISPICKVAL(  GE_harm_no_foul_clause__c  , &quot;Yes&quot;)), 
NOT(ISPICKVAL( GE_harm_no_foul_clause__c , &quot;No&quot;))), 

AND(
NOT(ISPICKVAL(  GE_Cust_suspnd_for_conv__c  , &quot;Yes&quot;)), 
NOT(ISPICKVAL( GE_Cust_suspnd_for_conv__c  , &quot;No&quot;))), 

AND(
NOT(ISPICKVAL( GE_rigt_to_term_Cust_defalt__c  , &quot;Yes&quot;)),
NOT(ISPICKVAL(GE_rigt_to_term_Cust_defalt__c  , &quot;No&quot;))),

AND(
NOT(ISPICKVAL( GE_Cust_term_for_conven__c , &quot;Yes&quot;)),
NOT(ISPICKVAL(GE_Cust_term_for_conven__c , &quot;No&quot;))),

AND(
NOT(ISPICKVAL(  GE_Cust_issue_order_vari__c , &quot;Yes&quot;)),
NOT(ISPICKVAL(  GE_Cust_issue_order_vari__c , &quot;N/A&quot;)),
NOT(ISPICKVAL(GE_Cust_issue_order_vari__c , &quot;No&quot;))),

AND(
NOT(ISPICKVAL(  GE_Is_there_Paymt_mile__c  , &quot;Yes&quot;)),
NOT(ISPICKVAL(  GE_Is_there_Paymt_mile__c  , &quot;N/A&quot;)),
NOT(ISPICKVAL(GE_Is_there_Paymt_mile__c  , &quot;No&quot;))),

AND(
NOT(ISPICKVAL(  GE_Are_FX_Fluct_provision__c  , &quot;Yes&quot;)),
NOT(ISPICKVAL(GE_Are_FX_Fluct_provision__c , &quot;No&quot;)),
NOT(ISPICKVAL(GE_Are_FX_Fluct_provision__c , &quot;N/A&quot;))
),

AND(
NOT(ISPICKVAL(  GE_Are_e_invoice_allowed__c  , &quot;Yes&quot;)),
NOT(ISPICKVAL(GE_Are_e_invoice_allowed__c  , &quot;No&quot;))),


AND(
NOT(INCLUDES(  GE_OG_Features_of_GE_susp_due_to_Cust__c  , &quot;written notice is required&quot;)),
NOT(INCLUDES(GE_OG_Features_of_GE_susp_due_to_Cust__c, &quot;suspension cost can be charged to Custmr&quot;)),
NOT(INCLUDES(GE_OG_Features_of_GE_susp_due_to_Cust__c, &quot;delivery schedule can be adjusted&quot;)),
NOT(INCLUDES(GE_OG_Features_of_GE_susp_due_to_Cust__c, &quot;None&quot;))),

AND( 
NOT(ISPICKVAL( GE_s_Susp_for_Cust_deft__c , &quot;Yes&quot;)), 
NOT(ISPICKVAL( GE_s_Susp_for_Cust_deft__c , &quot;NO&quot;))), 


AND(
ISNULL( GE_Is_there_a_LD_clause__c )
),

AND(
ISNULL( GE_Is_subject_to_perfrm_Guar__c )
)))</errorConditionFormula>
        <errorMessage>Enter all Mandatory fields which are indicated with *</errorMessage>
    </validationRules>
</CustomObject>